# fiap-ai-scientist-tech-challange-fase-01

./: .gitignore  README.md  pyproject.toml
data/processed/: dados_processados.csv
docs/: data_dictionary.md
notebooks/: 01_business_understanding.ipynb  02_data_understanding.ipynb  03_data_preparation.ipynb  04_eda.ipynb  05_modelagem_regressao.ipynb  06_modelagem_classificacao.ipynb
reports/slides/: nps_preditivo_fase1.pptx
src/nps/: data.py  features.py
