[project]
name = "nps-preditivo"
version = "0.1.0"
description = "Tech Challenge Fase 1 - FIAP MBA AI Scientist - NPS preditivo em e-commerce"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.2",
    "numpy>=1.26",
    "scipy>=1.13",
    "scikit-learn>=1.5",
    "matplotlib>=3.9",
    "seaborn>=0.13",
    "statsmodels>=0.14",
    "xgboost>=2.1",
    "lightgbm>=4.5",
    "shap>=0.46",
    "jupyterlab>=4.2",
    "ipykernel>=6.29",
]

[dependency-groups]
dev = [
    "ruff>=0.6",
    "pytest>=8.3",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nps"]
